--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <title>Home - Tennis score keeper</title>
+    <title>Home - Tennis Score Keeper</title>
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
     <script type="text/javascript">
       document.addEventListener("DOMContentLoaded", () =>{
