Fixed some bugs. Added spectator support.

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     </script>
   </head>
   <body>
-    <h1>Tennis score keeper</h1>
+    <h1>Tennis Score Keeper</h1>
     <button id="create-game" class="select-buttons">Create Game</button>
     <button id="join-game" class="select-buttons">Join Game</button>
   </body>
