--- a/static/style.css
+++ b/static/style.css
@@ -1,1 +1,54 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap")
+body{
+  text-align:center;
+  background:rgb(213, 255, 46);
+  color:black;
+  font-family:Roboto;
+}
+.select-buttons{
+  border-radius:15px;
+  font-size:30px;
+  background:white;
+  border-width:0;
+  width:500px;
+  height:100px;
+}
+.inputs{
+    width:250px;
+    height:50px;
+    border-width:0;
+    border-radius:9px;
+    background:white;
+}
+.seperation-divs{
+  margin-top:30px;
+}
+table{
+  text-align:center;
+  width:64%;
+  margin-left:18%
+}
+th{
+  font-weight:bold;
+  background:white;
+}
+.player_add{
+  background:green;
+  color:white;
+  border-width:0;
+  height:50px;
+  width:50px;
+  font-size:30px;
+  border-radius:30px;
+}
+.player_remove{
+  background:red;
+  color:white;
+  border-width:0;
+  height:50px;
+  width:50px;
+  font-size:30px;
+  border-radius:30px;
+}
+.name{
+  background:white;
+}
